erDiagram
    users {
        int id PK
        citext email UK
        varchar password_hash
        varchar display_name
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }
    
    orientations {
        int id PK
        varchar name UK
        timestamp created_at
    }
    
    genders {
        int id PK
        varchar name UK
        timestamp created_at
    }
    
    pronouns {
        int id PK
        varchar name UK
        timestamp created_at
    }
    
    profiles {
        int user_id PK,FK
        citext handle UK
        text bio
        int orientation_id FK
        int gender_id FK
        int pronoun_id FK
        date birthday
        varchar location
        varchar website
        varchar avatar_url
        varchar banner_url
        boolean is_profile_public
        boolean show_orientation
        boolean show_gender
        boolean show_pronoun
        boolean show_birthday
        boolean show_location
        timestamp created_at
        timestamp updated_at
    }
    
    media_assets {
        int id PK
        int user_id FK
        varchar url
        varchar mime_type
        bigint size_bytes
        int width
        int height
        timestamp created_at
    }
    
    posts {
        int id PK
        int user_id FK
        varchar title
        text body
        varchar visibility
        int media_id FK
        timestamp created_at
        timestamp updated_at
    }
    
    comments {
        int id PK
        int post_id FK
        int user_id FK
        int parent_id FK
        text body
        timestamp created_at
        timestamp updated_at
    }
    
    tags {
        int id PK
        citext name UK
        timestamp created_at
    }
    
    post_tags {
        int post_id PK,FK
        int tag_id PK,FK
    }
    
    follows {
        int follower_user_id PK,FK
        int followee_user_id PK,FK
        varchar status
        timestamp created_at
    }
    
    reactions {
        int id PK
        int user_id FK
        varchar target_type
        int target_id
        varchar reaction_type
        timestamp created_at
    }
    
    notifications {
        int id PK
        int user_id FK
        varchar type
        jsonb payload
        boolean is_read
        timestamp created_at
    }
    
    reports {
        int id PK
        int reporter_user_id FK
        varchar target_type
        int target_id
        text reason
        varchar status
        timestamp created_at
        timestamp updated_at
    }
    
    blocks {
        int blocker_user_id PK,FK
        int blocked_user_id PK,FK
        timestamp created_at
    }
    
    content_items {
        int id PK
        varchar item_type
        varchar title
        varchar creator
        int release_year
        varchar isbn
        varchar url
        timestamp created_at
    }
    
    reviews {
        int id PK
        int item_id FK
        int user_id FK
        int rating
        varchar title
        text body
        timestamp created_at
        timestamp updated_at
    }
    
    point_events {
        int id PK
        int user_id FK
        varchar event_type
        int points
        varchar ref_type
        int ref_id
        timestamp created_at
    }
    
    awards {
        int id PK
        varchar name UK
        text description
        int threshold_points
        int prize_amount_yen
        timestamp created_at
    }
    
    user_awards {
        int id PK
        int user_id FK
        int award_id FK
        timestamp awarded_at
    }
    
    %% Relationships
    users ||--|| profiles : "has"
    users ||--o{ media_assets : "uploads"
    users ||--o{ posts : "creates"
    users ||--o{ comments : "writes"
    users ||--o{ reactions : "makes"
    users ||--o{ notifications : "receives"
    users ||--o{ reports : "files"
    users ||--o{ reviews : "writes"
    users ||--o{ point_events : "earns"
    users ||--o{ user_awards : "receives"
    
    orientations ||--o{ profiles : "has"
    genders ||--o{ profiles : "has"
    pronouns ||--o{ profiles : "uses"
    
    posts ||--o{ comments : "has"
    posts ||--o{ post_tags : "tagged_with"
    posts ||--o| media_assets : "includes"
    
    tags ||--o{ post_tags : "applied_to"
    
    comments ||--o{ comments : "replies_to"
    
    users ||--o{ follows : "follows"
    users ||--o{ follows : "followed_by"
    
    users ||--o{ blocks : "blocks"
    users ||--o{ blocks : "blocked_by"
    
    content_items ||--o{ reviews : "reviewed_in"
    
    awards ||--o{ user_awards : "awarded_as"
